Shut down GL in WindowServiceTestSetup::d'tor()

Otherwise, the GL setup may leak to the next test that happen to run
after the current one which is generally not expected. This is specially
problematic if tests are run with --single-process-tests flag.

BUG=779614
TEST=services_unittests --single-process-tests

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Id37eb35530be3519e7e1d8e47c1908bf6999839f
Reviewed-on: https://chromium-review.googlesource.com/1192592
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Mohsen Izadi <mohsen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586758}
Former-commit-id: 2cef28bf6a2b9583fa1d84db7738475902d0f673